# lan-module-tests

./: .gitignore  .gitmodules  README.md
aec3-test/: CMakeLists.txt  README.md  help.sh
aec3-test/audio_processing/: splitting_filter_c.c
aec3-test/audio_processing/logging/: apm_data_dumper.h
aec3-test/base/jsoncpp/: CMakeLists.txt
aec3-test/base/jsoncpp/include/json/: config.h
aec3-test/demo/: demo.cc  wavreader.c  wavreader.h  wavwriter.c  wavwriter.h
aec3-test/res/: audio.aecdump  settings.txt
ai-course/AndrewNg/: README.md
ai-course/LiMu/: README.md  a.py  help.md
ai-course/TensorFlow/: README.md
android-tests/: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
android-tests/android-ui-lib/: build.gradle
android-tests/android-utils/: build.gradle
android-tests/camera-lib/: build.gradle
android-tests/camera-test/: build.gradle
android-tests/codec-test/: build.gradle
android-tests/opengl-test/: build.gradle
android-tests/unit-test/: build.gradle
cmake-test/: CMakeLists.txt  acmake.sh  hello-cmake.cpp
cpp-test/: .gitignore  TestBase.h  TestCoder.cpp  TestCoder.h  TestDeque.cpp  TestDeque.h  TestGLM.cpp  TestGLM.h  TestJMP.cpp  TestJMP.h  TestJson.cpp  TestJson.h  TestMap.cpp  TestMap.h  TestPtr.cpp  TestPtr.h  TestScale.cpp  TestScale.h  TestSet.cpp  TestSet.h  TestSlot.cpp  TestSlot.h  TestTimestampExtrapolator.cpp  TestTimestampExtrapolator.h  TestVector.cpp  TestVector.h  build.sh  main.cpp
cpp-test/flvparser/: audio.aac  flv_parser.cpp
cpp-test/mp4parser/: dump.txt  mp4_parser.cpp
cpp-test/tsparser/: bits_operation.h  test.ts  ts_parser.cpp
ffmpeg_test/: CMakeLists.txt  help.h  output.h264  test_encode_avc.cpp  test_encode_mutex.cpp
ffmpeg_test/docs/: ffmpeg.drawio
foundation/: cpp_header_templete.txt  cpp_source_templete.txt  generate.py
go-test/: .gitignore  example-go.go  example.go  local_serv.go  test-gochann.go  test-gomethod.go
gradle-test/: build.sh
gtest-test/: basic.cpp  build.sh
ios-demo/Demo2/: AppDelegate.h  AppDelegate.m  CollectViewController.h  CollectViewController.m  CollectViewController.xib  SceneDelegate.h  TestConstrainsViewController.h  TestConstrainsViewController.m  TestConstrainsViewController.xib  TestTableViewController.h  TestTableViewController.m  TestTableViewController.xib  UrlConnViewController.h  UrlConnViewController.m  UrlConnViewController.xib  main.m
ios-demo/Demo2.xcodeproj/: project.pbxproj
ios-demo/Demo2Tests/: Demo2Tests.m
ios-demo/Demo2UITests/: Demo2UITests.m
ios-dsym-test/: 111.crash  read.md  symbolicated.crash
java-test/: build.sh  sources.txt
kotlin-test/: build.sh  interface.kt
network-test/: .gitignore  CMakeLists.txt  README.md  cscope.in.out  cscope.out  cscope.po.out  ev_wrap.h  kcp_wrap.c  kcp_wrap.h  local_tcp_client.c  local_tcp_server.c  network.c  network.h  play_code.h  play_config.h  tags  udp_file_client.c  udp_file_server.c
network-test/kcp/: cscope.in.out  cscope.out  cscope.po.out  ikcp.c  tags
network-test/libev/: .gitignore  Makefile  config.status  ev.3  libtool
note/Android/: Android.wps  FAQ.md  activity.md  adb  android_system.pptx  binder_hwbinder.pptx  cache  cap.pptx  codec.pptx  drawable+resource+atlas  gtest  input  logd_sdk25_ptwo.vim  mmcamera_sdk25_kdm2412-660.vim  network_sdk25_kdm2412-660.vim  pms  qcamhal_sdk25_kdm2412-660.vim  qcom_hwc  qcom_jpeg  render.pptx  systemui.md  todo
note/code-note/: echo_net.h  echo_udp_broadcat_client.c  echo_udp_client.c  echo_udp_server.c  fork_and_sync.c  fork_exec.c  ini.txt  inter_process_filelock.c  new_thread_wait.c  pid_printf.h  pipe_read_write.c  process_between_signal.c  process_semphore.c  sigchld_handle_process_out.c  signal_sigchld.c  socketopt.c  thread_condition.c  thread_semphore.c
note/diagram-note/: rtc-qos.drawio  srs.drawio  win-rtc.mdj
note/ffmpeg/: av_sync.md  ffmpeg.drawio
note/player/: qplayer.pptx
note/ppt-note/: art.pptx  camera.pptx  pili-sdk.pptx  webrtc_new.pptx  webrtc_v7.pptx
note/srs/: state_threads.md
note/webrtc/: audio_sender_receiver.md  bwe.md  cc_bbr.md  misc.md  probe_bitrate_estimator.md  rtc_probe.md  rtp_rtcp.md  sdp.md  tools.md
note/work-env/: .srwcomm  lldb.cmd
py-test/: audio_wave.py  bar_plot_plt.py  example.py  filter_log_and_plot.py  matrix.py  pie_plt.py  stack_plt.py  test-json.txt  test-json2.txt
py-test/rtc_qos/: draw_qos_plot.py  draw_signal_scatter.py  filter_log.py
ssl_demo/: .gitignore  Makefile  ssl_client.cpp  ssl_lib.cpp  ssl_lib.h  ssl_server.cpp
unix-test/: daemon_process.c  echo_fork_server.c  echo_select_client.c  echo_select_server.c  echo_tcp_client.c  echo_tcp_server.c  fifo_server_client.c  fork_getpid.c  fork_wait.c  fork_waitpid_option.c  gethostbyname.c  ipc_sharemem.c  message_queue.c  thread_create.c  thread_mutex.c
unix-test/byte_order/: byte_order  byte_order_change.c
unix-test/dns_resolve/: alias_parse
unix-test/echo_daemon_process/: server.c
unix-test/echo_mulclient_by_process/: echo_server  echo_server.c
unix-test/echo_mulclient_by_thread/: Client.c  Server
unix-test/echo_poll_io/: client  client.c  poll_server.c  server
unix-test/echo_select_io/: Client.c  Server  Server.c
unix-test/echo_udp_client/: client.c
unix-test/echo_udp_server/: client  client.c
unix-test/fifo/: delete_fifo.c
unix-test/file_comp/: a1.txt  a2.txt~  stdin
unix-test/file_lock/: file_tc.c
unix-test/message_ipc/: msq_client  msq_client.c  msq_server
unix-test/message_queue_del/: msq_rm.c
unix-test/message_queue_get/: msq_get
unix-test/message_queue_recv/: msq_recv  msq_recv.c
unix-test/message_queue_send/: msq_send
(+419 files in other folders)
